[package]
name = "finscript"
version = "0.1.0"
authors = ["Tilak Patel"]
edition = "2021"

[[bin]]
name = "finscript"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.7"
yahoo_finance_api = "=2.2.1"
chrono = "0.4"  # For working with timestamps
tokio = { version = "1", features = ["full"] }  # For asynchronous support
